# cuda-squeeze-adaptive-huffman-coding

./: ProjectHome.md
CSAHC/: out1.ahc  out3.ahc
CSAHC-Linux/: .cproject  .project
CSAHC-Linux/src/: CSAHC-Linux.cpp
CSAHC-Linux/src/AdaptiveHuffmanCoder/: HTreeOld.h
CSAHC/src/: CSAHC.cpp  runner.cpp
CSAHC/src/AdaptiveHuffmanCoder/: HTree.h  Tree.h
CSAHC_Test/: .cproject  .project
CSAHC_Test/Debug/src/: CSAHC.d
CSAHC_test/src/: CSAHC_test.cpp
CSAHC_test/src/AdaptiveHuffmanCoder/: HTree.h
CSHC/: .cproject  CSHC.exe.stackdump  out.hc
CSHC/Debug/: sources.mk
CSHC/Debug/src/: subdir.mk
CSHC/src/: CSHC.cpp  HTree.h
CSHC2/src/: CSHC2.cpp
CUDA-Huffman/: CMakeLists.txt  CUDA-Huffman.kdev4  main.cpp
CUDA-Huffman/CPUCompression/: CPUmain.h
CUDA-Huffman/Compressor/: HTree.h
CUDA-Huffman/GPUCompression/: GPUmain.cu  GPUmain.h
CUDA-Huffman/GPULibrary/: CMakeLists.txt
CUDA-HuffmanCoder/: CUDA-HuffmanCoder.kdev4  main.cpp
CUDA-HuffmanCoder/.kdev4/: CUDA-HuffmanCoder.kdev4
CUDA-HuffmanCoder/CPUCompression/: CMakeLists.txt  CPUmain.cpp  CPUmain.h
CUDA-HuffmanCoder/GPUCompression/: CMakeLists.txt  gpumain.cu  gpumain.h
CUDA-HuffmanCoder/GPUCompressor/: CMakeLists.txt  gpurunner.cpp  gpurunner.h
CUDA-HuffmanCoder/HuffmanCoder/: Compressor.h
CUDAHuffmanCoder/: .cproject
CUDAHuffmanCoder/results/: HEX
CUDAHuffmanCoder/src/: CUDA-HuffmanGFX.cpp
CUDAHuffmanCoder/src/CPU/: CPUmain.cpp  CPUmain.h
CUDAHuffmanCoder/src/GraphicsCard/: CMakeLists.txt  GrapicsCompression.cu  GrapicsCompression.h
CUDAHuffmanCoder/src/HuffmanCoder/: Compressor.h
CUDAHuffmanCoder/src/Release/: CMakeCache.txt  Makefile  cmake_install.cmake  cuda-huffmancoder
Huff-Pointer/: .cproject
HuffmanCoder/: .project
HuffmanCoder-predicate/: .project
HuffmanCoder-predicate/src/: CSHC2.cpp
HuffmanCoder/Release/: objects.mk
HuffmanCoder/Release/src/: subdir.mk
HuffmanCoder/src/: CSHC2.cpp
HuffmanCoder/src/HuffmanCoder/: HTree.h  HuffmanTree.h
ICVCircleHoughTrans/: README.txt
ICVCircleHoughTrans/src/: runner.java
ICVCircleHoughTrans/src/ImageProcessing/: ImageMethods.java  ImageProcesses.java  Picture.java  PictureExample.java
ICVCircleHoughTrans/test images/: Thumbs.db
trunk/CSAHC/: .cproject  .project  CSAHC.exe.stackdump  out.ahc  out0.ahc  out2.ahc
trunk/CSAHC-Linux/: timing of new algorithm.ods
trunk/CSAHC/src/: CSAHC.cpp
trunk/CSAHC/src/HuffmanCoder/: HTree.cpp  (+3 more)
trunk/CSAHC_Test/src/: CSAHC.cpp
trunk/CSAHC_test/: .cproject  .project
trunk/CSHC/: .project  values.input
trunk/CSHC/Debug/: makefile  objects.mk
trunk/CSHC/src/: CSHC.cpp  HTree.h
trunk/CSHC2/: .cproject  .project  CSHC2.exe.stackdump
trunk/CUDA-Huffman/: CMakeLists.txt  main.cpp
trunk/CUDA-Huffman/CPUCompression/: CPUmain.cpp
trunk/CUDA-Huffman/Compressor/: Compressor.h
trunk/CUDA-Huffman/GPUCompression/: CMakeLists.txt  GPUmain.h
trunk/CUDA-Huffman/GPULibrary/: GPUlib.cu  GPUlib.h
trunk/CUDA-HuffmanCoder/: CMakeLists.txt  main.cpp
trunk/CUDA-HuffmanCoder/.kdev4/: _custom.kdev4
trunk/CUDA-HuffmanCoder/CPUCompression/: CPUmain.cpp  CPUmain.h
trunk/CUDA-HuffmanCoder/GPUCompression/: gpumain.cu  gpumain.h
trunk/CUDA-HuffmanCoder/GPUCompressor/: gpurunner.cpp  gpurunner.h
trunk/CUDA-HuffmanCoder/HuffmanCoder/: Decompressor.h
trunk/CUDA-HuffmanCoder/Timer/: CMakeLists.txt
trunk/CUDAHuffmanCoder/: .cproject  .project
trunk/CUDAHuffmanCoder/results/: HEX  laptop
trunk/CUDAHuffmanCoder/src/: CMakeLists.txt  CUDA-HuffmanGFX.cpp
trunk/CUDAHuffmanCoder/src/CPU/: CMakeLists.txt  CPUmain.cpp  CPUmain.h
trunk/CUDAHuffmanCoder/src/GraphicsCard/: GrapicsCompression.cu  GrapicsCompression.h
trunk/CUDAHuffmanCoder/src/HuffmanCoder/: Compressor.h
trunk/CUDAHuffmanCoder/src/Release/: Makefile  cmake_install.cmake
trunk/CUDAHuffmanCoder/src/Release/GraphicsCard/: Makefile  cmake_install.cmake
trunk/CUDAHuffmanCoder/src/Release/Timer/: Makefile  cmake_install.cmake
trunk/CUDAHuffmanCoder/src/Timer/: CMakeLists.txt
trunk/Huff-Pointer/: .project
trunk/Huff-Pointer/Release/: makefile  sources.mk
trunk/Huff-Pointer/src/: CSHC2.cpp
trunk/HuffmanCoder/: .cproject
trunk/HuffmanCoder-predicate/: .cproject
trunk/HuffmanCoder/Release/: makefile
trunk/HuffmanCoder/src/: CSHC2.cpp
trunk/ICVCircleHoughTrans/: .project
trunk/ICVCircleHoughTrans/src/: runner.java
(+16 files in other folders)
